# ASDR

./: README.md
Arduino/libraries/SerialCommandServer/: serial_command_server.cpp
Arduino/serial_berry_imu_uvc_light/: berry_imu.cpp  berry_imu.hpp  serial_berry_imu_uvc_light.ino  serial_command_server.hpp
Arduino/serial_encoder_stepper/: serial_command_server.cpp  serial_encoder_stepper.ino
Arduino/serial_imu_light/: serial_command_server.hpp  serial_imu_light.ino
Arduino/serial_rotary_encoder_stepper_motor/: pwm.cpp  pwm.hpp  rotary_encoder.cpp  rotary_encoder.hpp  serial_rotary_encoder_stepper_motor.ino  stepper_motor.cpp  stepper_motor.hpp
Backend/ROS/src/coverage_path_planner/src/: coverage_path_planner_node.cpp
Frontend/: index.html  index.js  joystick.js
ROS/devel/: .catkin  setup.sh
ROS/devel/include/coverage_path_planner/: make_plan.h  make_planResponse.h
ROS/devel/include/discovery/: discover.h  discoverResponse.h
ROS/devel/include/serial_command_client/: send_command.h  send_commandResponse.h
ROS/devel/lib/adr/: adr_node
ROS/devel/lib/asdr/: asdr_node
ROS/devel/lib/berry_imu/: berry_imu_node
ROS/devel/lib/core/: core_node
ROS/devel/lib/coverage_path_planner/: coverage_path_planner_node
ROS/devel/lib/discovery/: discovery_node
ROS/devel/lib/mobile_base/: mobile_base_node
ROS/devel/lib/path_planner/: path_planner_node
ROS/devel/lib/pkgconfig/: adr.pc  asdr.pc  berry_imu.pc  core.pc  coverage_path_planner.pc  discovery.pc  mobile_base.pc  path_planner.pc  rest.pc  rotary_encoder.pc  serial_command_client.pc  stepper_motor.pc  uvc_light.pc
ROS/devel/lib/rest/: rest_node
ROS/devel/lib/rotary_encoder/: rotary_encoder_node
ROS/devel/lib/serial_command_client/: serial_command_client_node
ROS/devel/lib/stepper_motor/: stepper_motor_node
ROS/devel/lib/uvc_light/: uvc_light_node
ROS/devel/share/adr/cmake/: adr-msg-extras.cmake  adr-msg-paths.cmake  adrConfig.cmake
ROS/devel/share/asdr/cmake/: asdrConfig.cmake
ROS/devel/share/berry_imu/cmake/: berry_imuConfig.cmake
ROS/devel/share/core/cmake/: core-msg-extras.cmake  core-msg-paths.cmake  coreConfig.cmake
ROS/devel/share/coverage_path_planner/cmake/: coverage_path_plannerConfig.cmake
ROS/devel/share/discovery/cmake/: discoveryConfig.cmake
ROS/devel/share/mobile_base/cmake/: mobile_baseConfig.cmake
ROS/devel/share/path_planner/cmake/: path_planner-msg-paths.cmake  path_plannerConfig.cmake
ROS/devel/share/rest/cmake/: restConfig.cmake
ROS/devel/share/roseus/ros/adr/: manifest.l
ROS/devel/share/roseus/ros/asdr/: manifest.l
ROS/devel/share/roseus/ros/berry_imu/: manifest.l
ROS/devel/share/roseus/ros/core/: manifest.l
ROS/devel/share/roseus/ros/coverage_path_planner/: manifest.l
ROS/devel/share/roseus/ros/discovery/: manifest.l
ROS/devel/share/roseus/ros/mobile_base/: manifest.l
ROS/devel/share/roseus/ros/path_planner/: manifest.l
ROS/devel/share/roseus/ros/rest/: manifest.l
ROS/devel/share/roseus/ros/rotary_encoder/: manifest.l
ROS/devel/share/roseus/ros/serial_command_client/: manifest.l
ROS/devel/share/roseus/ros/stepper_motor/: manifest.l
ROS/devel/share/rotary_encoder/cmake/: rotary_encoderConfig.cmake
ROS/devel/share/serial_command_client/cmake/: serial_command_client-msg-extras.cmake  serial_command_clientConfig.cmake
ROS/devel/share/stepper_motor/cmake/: stepper_motorConfig.cmake
ROS/devel/share/uvc_light/cmake/: uvc_light-msg-extras.cmake  uvc_lightConfig.cmake
ROS/launch/: adr.launch  asdr.launch
ROS/src/adr/: CMakeLists.txt  package.xml
ROS/src/adr/src/: adr_node.cpp  adr_node.hpp  finite_state_machine.cpp  finite_state_machine.hpp  ros_launch_manager.hpp  state_machine.cpp  state_machine.hpp
ROS/src/asdr/: CMakeLists.txt
ROS/src/asdr/src/: asdr_node.cpp  asdr_node.hpp  finite_state_machine.cpp  finite_state_machine.hpp  ros_launch_manager.hpp
ROS/src/berry_imu/: CMakeLists.txt
ROS/src/berry_imu/src/: berry_imu_node.cpp  berry_imu_node.hpp
ROS/src/core/: CMakeLists.txt  package.xml
ROS/src/core/src/: core_node.cpp  core_node.hpp  state_machine.cpp  state_machine.hpp
ROS/src/coverage_path_planner/: CMakeLists.txt
ROS/src/coverage_path_planner/src/: coverage_path_planner_node.cpp  coverage_path_planner_node.hpp  mandoline.cpp  mandoline.hpp
ROS/src/discovery/src/: discovery_node.cpp  discovery_node.hpp
ROS/src/discovery/srv/: discover.srv
ROS/src/mobile_base/config/: mobile_base_controller.yaml
ROS/src/mobile_base/src/: mobile_base_node.cpp  mobile_base_node.hpp
ROS/src/rest/: CMakeLists.txt  package.xml
ROS/src/rest/src/: rest_node.cpp  rest_node.hpp
ROS/src/rotary_encoder/src/: rotary_encoder_node.cpp  rotary_encoder_node.hpp
ROS/src/rotary_encoder/srv/: get_rotary_encoder.srv
ROS/src/serial_command_client/: CMakeLists.txt
ROS/src/serial_command_client/src/: serial_command_client.cpp  serial_command_client.hpp  serial_command_client_node.cpp  serial_command_client_node.hpp
ROS/src/serial_command_client/srv/: send_command.srv
ROS/src/stepper_motor/src/: stepper_motor_node.cpp  stepper_motor_node.hpp
ROS/src/stepper_motor/srv/: set_stepper_motor.srv
ROS/src/uvc_light/src/: uvc_light_node.cpp
src/adr/: CMakeLists.txt  package.xml
src/adr/src/: berry_imu.cpp  berry_imu.hpp  berry_imu_node.cpp  berry_imu_node.hpp  discovery.cpp  discovery.hpp  grid.cpp  grid.hpp  mandoline.cpp  path_planner_node.cpp  path_planner_node.hpp
src/berry_imu/: CMakeLists.txt  package.xml
src/berry_imu/src/: berry_imu.cpp  berry_imu_node.cpp  berry_imu_node.hpp
src/path_planner/: CMakeLists.txt  package.xml
src/path_planner/src/: mandoline.cpp  mandoline.hpp  path_planner_node.cpp  path_planner_node.hpp
(+15 files in other folders)
